--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     &copy;2020 by Taskinator
   </footer>
 
-  <script src="./script.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
